@@ -22,6 +22,9 @@ mountall (2.10) UNRELEASED; urgency=low
   * Reduce priority of failed to mount error for remote filesystems since
     we try again, and this just spams the console.  LP: #504224. 
 
+  * Keep hold of the dev_t when parsing /proc/self/mountinfo, then after
+    mounting /dev (or seeing that it's mounted) create a quick udev rules
+    file that adds the /dev/root symlink to this device.  LP: #527216.
   * Do not try and update /etc/mtab when it's a symbolic link.  LP: #529993.
   * Remove odd -a option from mount calls, probably a C&P error from the
     fsck code long ago.  LP: #537135.
